# poetry-demo

./: .env.jinja  .gitignore  copier.yml  docker-compose.yml  pyproject.toml
